--- a/package.json
+++ b/package.json
@@ -16,35 +16,37 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.4.1",
-    "@astrojs/rss": "^4.0.2",
+    "@astrojs/check": "^0.5.4",
+    "@astrojs/rss": "^4.0.5",
     "@resvg/resvg-js": "^2.6.0",
-    "astro": "^4.2.1",
+    "astro": "^4.4.0",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
-    "satori": "^0.10.11",
+    "satori": "^0.10.13",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.0.9",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
-    "@divriots/jampack": "^0.23.2",
+    "@divriots/jampack": "^0.23.3",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
-    "@types/react": "^18.2.48",
-    "@typescript-eslint/parser": "^6.19.0",
-    "astro-eslint-parser": "^0.16.2",
+    "@types/react": "^18.2.57",
+    "@typescript-eslint/parser": "^7.0.2",
+    "astro-eslint-parser": "^0.16.3",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
-    "eslint-plugin-astro": "^0.31.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.2.4",
+    "eslint-plugin-astro": "^0.31.4",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
