--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,11 @@
 {
-  "recommendations": ["astro-build.astro-vscode"],
+  "recommendations": [
+    "astro-build.astro-vscode",
+    "esbenp.prettier-vscode",
+    "bradlc.vscode-tailwindcss",
+    "dbaeumer.vscode-eslint",
+    "eamodio.gitlens",
+    "enkia.tokyo-night"
+  ],
   "unwantedRecommendations": []
 }
