--- a/package.json
+++ b/package.json
@@ -16,39 +16,40 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.1",
+    "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.7",
     "@resvg/resvg-js": "^2.6.2",
-    "astro": "^4.11.5",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "astro": "^4.15.12",
+    "caniuse-lite": "^1.0.30001667",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
-    "satori": "^0.10.14",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3"
+    "satori": "^0.11.2",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.6.0",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
-    "@divriots/jampack": "^0.24.4",
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/github-slugger": "^1.3.0",
-    "@types/react": "^18.3.3",
-    "@typescript-eslint/parser": "^7.16.0",
-    "commitizen": "^4.3.0",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/sitemap": "^3.2.0",
+    "@astrojs/tailwind": "^5.1.1",
+    "@divriots/jampack": "^0.28.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/github-slugger": "^2.0.0",
+    "@types/react": "^18.3.11",
+    "@typescript-eslint/parser": "^8.8.1",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.6.0",
-    "eslint-plugin-astro": "^1.2.3",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "eslint": "^9.12.0",
+    "eslint-plugin-astro": "^1.2.4",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
